<resources>
    <string name="app_name">Plasma Bank</string>
    <string name="title_activity_verification">VerificationActivity</string>


    <string name="demo_date">01/01/1971</string>
    <string name="demo_zero">00</string>
    <string name="demo_mail">ex@example.com</string>

    <string name="hint_district">District</string>

    <!--  navigation  -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notification">Notification</string>

    <!--    registration -->
    <string name="title_overview">Overview</string>
    <string name="title_phone">Phone</string>
    <string name="title_email">Email</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_blood">Blood Group</string>
    <string name="title_donation">Last donation</string>
    <string name="title_location">Location</string>

    <!--    authentication -->
    <string name="title_get_started">Get Started</string>
    <string name="title_logging_condition">By logging in you agree to our Terms and conditions</string>
    <string name="hint_phone">01X XXXXX XXX</string>
    <string name="title_connect_with_plasma_donor">Connect with Plasma Donor in time</string>
    <string name="title_login_via_phone">Login via Phone</string>
    <string name="thank_you">Thank You</string>
    <string name="go">GO</string>
    <string name="complete">Complete</string>
    <string name="hint_name">Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_status">Status</string>
    <string name="hint_status">Donor</string>
    <string name="hint_b_ve">B+(ve)</string>
    <string name="hint_date">06/09/2021</string>
    <string name="state_donor">Donor</string>
    <string name="str_receiver">Receiver</string>
    <string name="user_type">User Type</string>
    <string name="write_description_here">write description here…</string>
    <string name="plasma_request">Plasma Request</string>


</resources>