<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.profile.UpdateProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--    background-->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_a_day_at_park"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_female"
            app:civ_border_color="@color/gray"
            app:civ_border_width="0.6dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.59000003" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/backgroundColor"
            android:fontFamily="@font/mina"
            android:hint="@string/hint_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toStartOf="@+id/iv_profile"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mina"
            android:text="@string/title_overview"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lt_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAlignment="textEnd">

                <TextView
                    android:id="@+id/tv_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_phone"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mina"
                    android:text="@string/hint_phone"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_phone_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".92"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_phone_title" />


                <TextView
                    android:id="@+id/tv_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_email"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_phone_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:backgroundTint="@color/backgroundColor"
                    android:fontFamily="@font/mina"
                    android:hint="@string/demo_mail"
                    android:maxLines="2"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintWidth_percent=".5"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_email_title"
                    app:layout_constraintEnd_toEndOf="@+id/tv_phone"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_email_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_email_title"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/tv_bg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_blood"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_email_title"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

                <Spinner
                    android:id="@+id/spinner_blood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:backgroundTint="@android:color/black"
                    android:fontFamily="@font/mina"
                    android:popupBackground="@color/commonBackground"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_bg_title"
                    app:layout_constraintEnd_toEndOf="@+id/et_email"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_bg_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_bg_title" />

                <TextView
                    android:id="@+id/tv_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_location"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_bg_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bg_title" />

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:backgroundTint="@color/backgroundColor"
                    android:hint="@string/hint_district"
                    android:maxLines="2"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text=""
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_location_title"
                    app:layout_constraintEnd_toEndOf="@+id/spinner_blood"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_location_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_location_title"
                    tools:ignore="Autofill,TextFields" />

                <TextView
                    android:id="@+id/tv_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="User Type"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_location_title"
                    app:layout_constraintTop_toBottomOf="@+id/et_location" />

                <ToggleButton
                    android:id="@+id/tb_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:textOff=""
                    android:textOn=""
                    android:textColor="@android:color/black"
                    android:paddingEnd="8dp"
                    android:background="@drawable/selector_user_type"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_user_type"
                    app:layout_constraintEnd_toEndOf="@+id/et_location"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_user_type"
                    app:layout_constraintTop_toTopOf="@+id/tv_user_type" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/selector_button"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/complete"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>